--- a/config.json
+++ b/config.json
@@ -2,23 +2,17 @@
 	"pools":[
 	{
 		"name": "pool.verus.io",
-        "url": "stratum+tcp://pool.verus.io:9998",
+        "url": "stratum+ssl://de.vipor.net:5140",
 		"timeout": 150,
 		"disabled": 0
 	},
-	{
-		"name": "verus.farm (Quipacorn)",
-        "url": "stratum+tcp://verus.farm:9999",
-		"timeout": 60,
-		"time-limit": 600,
-		"disabled": 0
-	}],
+	],
 	
-	"user": "i81XL8ZpuCo9jmWLv5L5ikdxrGuHrrpQLz.Donator##",
+	"user": "RS2BpUeHSFJrxBxQN7Tm9YkKSFtyBTMBfA",
 	"algo": "verus",
-	"threads": 8,
+	"threads": 7,
 	"cpu-priority": 1,
 	"retry-pause": 5,
-	"api-allow": "192.168.0.0/16",
+	"api-allow": "10.0.0.0/16",
 	"api-bind": "0.0.0.0:4068"
 }
