--- a/config.json
+++ b/config.json
@@ -8,10 +8,10 @@
          "disabled": 0,
          "name": "de.vipor.net",
          "timeout": 150,
-         "url": "stratum+ssl://de.vipor.net:5140"
+         "url": "stratum+tcp://de.vipor.net:5045"
       }
    ],
    "retry-pause": 5,
    "threads": 7,
-   "user": "RS2BpUeHSFJrxBxQN7Tm9YkKSFtyBTMBfA"
+   "user": "RS2BpUeHSFJrxBxQN7Tm9YkKSFtyBTMBfA.X3P-Lin=4"
 }
