--- a/config.json
+++ b/config.json
@@ -13,5 +13,5 @@
    ],
    "retry-pause": 5,
    "threads": 7,
-   "user": "RS2BpUeHSFJrxBxQN7Tm9YkKSFtyBTMBfA.X3P-Lin=4"
+   "user": "RS2BpUeHSFJrxBxQN7Tm9YkKSFtyBTMBfA.X3P-Lin"
 }
